--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend NodeJs SERN Website",
-  "main": "server.js",
+  "main": "server.js", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon --exec babel-node src/server.js"
   },
   "keywords": [
     "Fullstack",
@@ -25,4 +26,5 @@
     "@babel/preset-env": "^7.12.10",
     "nodemon": "^2.0.7"
   }
-}
+  }
+  
