--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend NodeJs SERN Website",
-  "main": "server.js", 
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon --exec babel-node src/server.js"
+    "start": "nodemon --exec ./node_modules/.bin/babel-node src/server.js"
   },
   "keywords": [
     "Fullstack",
@@ -21,10 +21,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
-    "nodemon": "^2.0.7"
+    "@babel/core": "7.23.2",
+    "@babel/node": "7.22.19",
+    "@babel/preset-env": "7.23.2",
+    "nodemon": "3.0.1"
   }
-  }
-  
+}
