--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,12 +18,14 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "@babel/core": "7.23.2",
     "@babel/node": "7.22.19",
     "@babel/preset-env": "7.23.2",
-    "nodemon": "3.0.1"
+    "nodemon": "3.0.1",
+    "sequelize-cli": "^6.6.1"
   }
 }
