--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mysql2": "^3.6.2",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
