--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
   "author": "Phhoang",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
