--- a/Backend/src/config/config.json
+++ b/Backend/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "web_2",
+    "database": "web",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "logging": false 
